syntax = "proto3";

option go_package = "/protos";

package corporation;

service Corporation {
    rpc CreateShop (CreateShopRequest) returns (CreateShopResponse) {}
    rpc GetShop (GetShopRequest) returns (CreateShopResponse) {}
    rpc GetListShop (GetListShopRequest) returns (GetListShopResponse) {}
    rpc UpdateShop (UpdateShopRequest) returns (CreateShopResponse) {}
    rpc DeleteShop (DeleteShopRequest) returns (DeleteShopResponse) {}

    rpc CreateDevice (CreateDeviceRequest) returns (CreateDeviceResponse) {}
    rpc GetDevice (GetDeviceRequest) returns (CreateDeviceResponse) {}
    rpc UpdateDevice (UpdateDeviceRequest) returns (CreateDeviceResponse) {}
    rpc DeleteDevice (DeleteDeviceRequest) returns (DeleteDeviceResponse) {}
    rpc GetListDevice (GetListDeviceRequest) returns (GetListDeviceResponse) {}

    rpc CreateCorporation (CreateCorporationRequest) returns (CreateCorporationResponse) {}
    rpc GetCorporation (GetCorporationRequest) returns (CreateCorporationResponse) {}
    rpc GetListCorporation (GetListCorporationRequest) returns (GetListCorporationResponse) {}
    rpc UpdateCorporation (UpdateCorporationRequest) returns (CreateCorporationResponse) {}
    rpc DeleteCorporation (DeleteCorporationRequest) returns (DeleteCorporationResponse) {}

    rpc CreateCenter (CreateCenterRequest) returns (CreateCenterResponse) {}
    rpc GetCenter (GetCenterRequest) returns (CreateCenterResponse) {}
    rpc GetListCenter (GetListCenterRequest) returns (GetListCenterResponse) {}
    rpc UpdateCenter (UpdateCenterRequest) returns (CreateCenterResponse) {}
    rpc DeleteCenter (DeleteCenterRequest) returns (DeleteCenterResponse) {}
}
message GetListCenterRequest{
    int64 page = 1;
    int64 perPage = 2;
    int64 corporationId = 3;
}
message GetListCenterResponse{
    repeated CreateCenterResponse listCenter = 1;
}
message CreateCenterRequest{
    string name = 1;
    string detail = 2;
    string type = 3;
    int64 corporationId = 4;
}
message CreateCenterResponse{
    int64 id = 1;
    string name = 2;
    string detail = 3;
    string type = 4;
    int64 corporationId = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message GetCenterRequest {
    int64 id = 1;
}

message UpdateCenterRequest{
    int64 id = 1;
    string name = 2;
    string detail = 3;
    string type = 4;
    int64 corporationId = 5;
}
message DeleteCenterRequest{
    int64 id = 1;
}
message DeleteCenterResponse{
    int64 rowsAffected = 1;
}

// [CF31-5]
message CreateShopRequest{
    string name = 1;
    string address = 2;
    int64 createdBy = 3;
}
message CreateShopResponse{
    int64 id = 1;
    string name = 2;
    string address = 3;
    int64 createdBy = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message GetShopRequest{
    int64 id = 1;
}

message GetListShopRequest{
    int64 page = 2;
    int64 perPage = 3;
}

message GetListShopResponse{
    repeated CreateShopResponse GetListShopResponse = 1;
}

message UpdateShopRequest{
    int64 id = 1;
    string name = 2;
    string address = 3;
}

message DeleteShopRequest{
    int64 id = 1;
}
message DeleteShopResponse{
    int64 rowsAffected = 1;
}

message CreateDeviceRequest {
    string maker = 1;
    string serialNumber = 2;
    string deviceType = 3;
    string usePurpose = 4;
    int64 owner = 5;
    bool onsiteType = 6;
    int64 accountId = 7;
    int64 posId = 8;
    int64 centerId = 9;
    string resolution = 10;
}
message CreateDeviceResponse {
    int64 id = 1;
    string maker = 2;
    string serialNumber = 3;
    string deviceType = 4;
    string usePurpose = 5;
    int64 owner = 6;
    bool onsiteType = 7;
    int64 accountId = 8;
    int64 posId = 9;
    int64 centerId = 10;
    string resolution = 11;
    string createdAt = 12;
    string updatedAt = 13;
}
message GetDeviceRequest {
    int64 id = 1;
}
message UpdateDeviceRequest {
    int64 id = 1;
    string maker = 2;
    string serialNumber = 3;
    string deviceType = 4;
    string usePurpose = 5;
    int64 owner = 6;
    bool onsiteType = 7;
    int64 accountId = 8;
    int64 posId = 9;
    int64 centerId = 10;
    string resolution = 11;
}
message DeleteDeviceRequest{
    int64 id = 1;
}
message DeleteDeviceResponse{
    int64 rowsAffected = 1;
}
message GetListDeviceRequest{
    int64 page = 1;
    int64 perPage = 2;
    int64 accountId = 3;
    int64 posId = 4;
    int64 centerId = 5;
    string deviceType = 6;
}
message GetListDeviceResponse{
    repeated CreateDeviceResponse GetListDeviceResponse = 1;
}
message CreateCorporationRequest {
    string name = 1;
    string address = 2;
    string detail = 3;
}
message CreateCorporationResponse{
    int64 id = 1;
    string name = 2;
    string address = 3;
    string detail = 4;
    string createdAt = 5;
    string updatedAt = 6;
}
message GetCorporationRequest{
    int64 id = 1;
}
message UpdateCorporationRequest{
    int64 id = 1;
    string name = 2;
    string address = 3;
    string detail = 4;
}
message DeleteCorporationRequest{
    int64 id = 1;
}
message DeleteCorporationResponse{
    int64 rowsAffected = 1;
}
message GetListCorporationRequest {
    int64 page = 1;
    int64 perPage = 2;
}
message GetListCorporationResponse{
    repeated CreateCorporationResponse GetListCorporationResponse = 1;
}
